<resources>
    <string name="app_name">DriveIt</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="daily">Daily</string>
    <string name="title_activity_availble_cars">AvailbleCarsActivity</string>
    <string name="title_activity_available_cars">AvailableCarsActivity</string>
    <string name="title_lowest_price">Lowest Price</string>
    <string name="title_best_match">Best Match</string>
    <string name="title_highest_price">Highest Price</string>
    <string name="title_Storage">Storage</string>
    <string name="best_match">Best Match</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="fire_login">Fire Login</string>
    <string name="register_now">Register Now</string>
</resources>