<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c44de"
    tools:context=".ui.auth.LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:background="@drawable/logo_round_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_name"
        android:layout_width="175dp"
        android:layout_height="61dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/server_login"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username_signin"
            android:layout_width="317dp"
            android:layout_height="49dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/logo_round_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="Username"
            android:inputType="text"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_signin"
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/logo_round_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username_signin"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/fire_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email_si"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/logo_round_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_si"
            android:layout_width="380dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/logo_round_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_si" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="161dp"
        android:layout_height="27dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_fire_login"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:layout_marginBottom="228dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:onClick="tv_fire_login"
        android:text="@string/fire_login"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register_now"
        android:layout_width="130dp"
        android:layout_height="28dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:text="@string/register_now"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="237dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="508dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/round_black_button_view"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:onClick="performLogin"
        android:paddingLeft="20dp"
        android:text="LOG IN"
        android:clickable="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />



</androidx.constraintlayout.widget.ConstraintLayout>